...

  List<Widget> _recents(BuildContext context) => [
    Row(
      children: [
        Expanded(
          child: Text(
            'Recently searched',
            style: Theme.of(context).textTheme.titleMedium,
          ),
        ),
        TextButton(
          onPressed: recents.value.isEmpty
              ? null
...
